# ros-thymio

./: .gitignore  LICENSE  README.md
docker/foxy/: Dockerfile
docker/galactic/: Dockerfile
docker/melodic/: Dockerfile
docker/noetic/: Dockerfile
epuck_description/: CMakeLists.txt  model.config  package.xml
epuck_description/launch/: model.launch.py  spawn.launch
epuck_description/meshes/: base.dae  wheel.dae
epuck_description/urdf/: base.urdf.xacro  camera.urdf.xacro  epuck.urdf.xacro  wheel.urdf.xacro
epuck_driver/: package.xml  setup.cfg  setup.py
epuck_driver/aseba/: sim_epuck_ros.aesl
epuck_driver/epuck_driver/: epuck_driver_node.py  multi_epuck_driver_node.py
epuck_driver/launch/: epuck.launch  playground_epuck.launch  test_follow_square_epuck.launch
thymio_description/: CMakeLists.txt  README.md  model.config  package.xml
thymio_description/config/: log710.yaml
thymio_description/launch/: gazebo_bringup.launch  joy_teleop.launch  model.launch  model.launch.py  rviz.launch  rviz.launch.py  spawn.launch  template.rviz  test_gazebo_bringup.launch  test_gazebo_bringup_world.launch  world.sdf
thymio_description/meshes/: base_collision.dae  base_simple.dae  wheel.dae
thymio_description/script/: generate_rviz_config.py
thymio_description/urdf/: base.urdf.xacro  imu.urdf.xacro  proximity_sensor.urdf.xacro  thymio.urdf.xacro  wheel.urdf.xacro
thymio_driver/: CMakeLists.txt  README.md  package.xml  setup.py
thymio_driver/aseba/: multi_thymio_ros.aesl  multi_thymio_ros_sim.aesl  thymio_ros.aesl  thymio_ros_sim.aesl
thymio_driver/calibration/: motor.yaml  playground.yaml
thymio_driver/cfg/: Thymio.cfg
thymio_driver/launch/: asebaros.launch  base.launch  main.launch  multi_base.launch  playground.launch  playground_multi.launch  switch.launch  thymio.launch
thymio_driver/script/: calibrate_motors.py  follow_square.py  multi_thymio_driver_node.py  thymio_driver_node.py
thymio_driver/thymio_driver/: base.py  calibrate_motors.py  follow_square.py  manager.py  multi_thymio_driver_node.py  thymio_driver_node.py
thymio_msgs/: CMakeLists.txt  README.md  package.xml
thymio_msgs/msg/: Comm.msg  Led.msg  LedGesture.msg  Sound.msg  SystemSound.msg
