<?xml version="1.0"?>
<package format="2">

  <name>thymio_description</name>
  <version>0.1.0</version>
  <description>
    Urdf model for Thymio II robot
  </description>

  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
</package>
