<package format="2">
  <name>thymio_driver</name>
  <version>0.1.0</version>
  <description>
    Driver for Thymio II robot

    This driver listens to cmd_vel and provides odometry for the Thymio II
    robot through asebaros.
  </description>

  <maintainer email="stephane@magnenat.net">Stéphane Magnenat</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/thymio_navigation_driver</url>

  <buildtool_depend>python3-setuptools</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>asebaros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>thymio_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>

</package>
