<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>thymio_driver</name>
  <version>0.1.0</version>
  <description>
    Driver for Thymio II robot

    This driver listens to cmd_vel and provides odometry for the Thymio II
    robot through asebaros.
  </description>

  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>BSD</license>
  <url type="website">http://jeguzzi.github.io/ros-aseba</url>

  <buildtool_depend>ament_package</buildtool_depend>

  <exec_depend>asebaros_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>thymio_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>thymio_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
