<package format="2">
  <name>thymio_msgs</name>
  <version>0.1.0</version>
  <description>
    Messages for the Thymio II robot ros driver
  </description>
  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
